# ETL_tutorial

./: .env  README.md  create_sample.ipynb  etl_redshift.py  pyproject.toml  redshift_users.csv  sample_user_data.csv  users_clean.csv
dags/: etl_redshift.ipynb  my_first_dag.py
demo/: .gitignore  build.gradle
